--- a/css/scrumproject.css
+++ b/css/scrumproject.css
@@ -17,6 +17,9 @@ tr.toggle-line-display.--open{
 	display: table-row;
 }
 
+button.ajax-action{
+	cursor: pointer;
+}
 
 
 .delete-ico.--disabled .fa:before, .delete-ico.--disabled:hover .fa:before{
